[gd_scene load_steps=4 format=3 uid="uid://dpay1ococ1bcl"]

[ext_resource type="Script" uid="uid://bicujcduqphgn" path="res://scripts/death_screen.gd" id="1_uyutr"]
[ext_resource type="Texture2D" uid="uid://d1pefby7qm7uw" path="res://assets/sprites/backdrop.png" id="2_dwo6e"]

[sub_resource type="LabelSettings" id="LabelSettings_dwo6e"]
font_size = 32
font_color = Color(0, 0, 0, 1)

[node name="DeathScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uyutr")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(554, 323)
scale = Vector2(1.92113, 1.92113)
texture = ExtResource("2_dwo6e")

[node name="Again" type="Button" parent="."]
layout_mode = 0
offset_left = 508.0
offset_top = 277.0
offset_right = 646.0
offset_bottom = 322.0
text = "Try Again?"

[node name="MainMenu" type="Button" parent="."]
layout_mode = 0
offset_left = 507.0
offset_top = 369.0
offset_right = 646.0
offset_bottom = 415.0
text = "Main Menu"

[node name="ScoreText" type="Label" parent="."]
layout_mode = 0
offset_left = 444.0
offset_top = 200.0
offset_right = 628.0
offset_bottom = 245.0
text = "Final Score: "
label_settings = SubResource("LabelSettings_dwo6e")

[connection signal="pressed" from="Again" to="." method="_on_again_pressed"]
[connection signal="pressed" from="MainMenu" to="." method="_on_main_menu_pressed"]
